--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>Prime Properties</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Navbar goes here -->
+    <nav class="bg-white shadow-lg">
+      <div class="max-w-6xl mx-auto px-4">
+        <div class="flex justify-between">
+          <div class="flex space-x-7">
+            <!-- Website Logo -->
+            <div>
+              <a class="flex items-center py-4 px-2" href="#">
+                <img
+                  class="h-8 w-8 mr-2"
+                  src="./images/house.png"
+                  alt="houseLogo"
+                />
+                <span class="font-semibold text-gray-500 text-lg"
+                  >Prime Properties</span
+                >
+              </a>
+            </div>
+            <!-- Primary Navbar items -->
+            <div class="hidden md:flex items-center space-x-1">
+              <a
+                class="px-2 py-4 border-b-4 border-green-500 text-green-500 font-semibold"
+                href=""
+                >Home</a
+              >
+              <a
+                class="px-2 py-4 text-gray-500 font-semibold hover:text-green-500 transition duration-300"
+                href=""
+                >Services</a
+              >
+              <a
+                class="px-2 py-4 text-gray-500 font-semibold hover:text-green-500 transition duration-300"
+                href=""
+                >About</a
+              >
+              <a
+                class="px-2 py-4 text-gray-500 font-semibold hover:text-green-500 transition duration-300"
+                href=""
+                >Contact Us</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
