--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Prime Properties</title>
   </head>
   <body>
-    <!-- Navbar goes here -->
+    <!-- Navbar Start -->
     <nav class="bg-white shadow-lg">
       <div class="max-w-6xl mx-auto px-4">
         <div class="flex justify-between">
@@ -52,5 +52,411 @@
         </div>
       </div>
     </nav>
+    <!-- Navbar End -->
+
+    <!--Site banner Start -->
+    <main class="mt-10 md:mt-16 px-4">
+      <div class="sm:text-center <!--lg:text-left-->">
+        <h1
+          class="tracking-tight font-extrabold text-4xl sm:text-5xl md:text=6xl"
+        >
+          <span class="block">Premium Properties</span>
+          <span class="block text-green-500">Non-premium Prices</span>
+        </h1>
+        <p
+          class="mt-3 text-base text-gray-500 md:text-xl md:mt-5 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto <!--lg:mx-0-->"
+        >
+          At prime properties, we ensure that our clients get the best
+          properties at affordable prices. Luxury is our priority and budget is
+          our constrain. Pick and choose from 1000+ properties across the globe.
+        </p>
+        <div
+          class="mt-5 sm:mt-8 sm:flex sm:justify-center <!--lg:justify-start-->"
+        >
+          <div class="max-sm:mt-2 md:m-2">
+            <a
+              class="flex w-full justify-center bg-green-600 text-white px-8 py-3 rounded-md"
+              href=""
+              >View Properties</a
+            >
+          </div>
+          <div class="max-sm:mt-2 max-md:ml-2 md:m-2">
+            <a
+              class="flex w-full justify-center bg-green-100 text-green-700 px-8 py-3 rounded-md"
+              href=""
+              >Explore Locations</a
+            >
+          </div>
+        </div>
+      </div>
+    </main>
+    <!--Site banner End -->
+    <!--Heading-->
+    <div class="mt-5 flex p-10 justify-center <!--lg:justify-start-->">
+      <h2 class="text-3xl text-gray-500 mb-2">Recent Properties</h2>
+    </div>
+
+    <!--Card section Start-->
+    <!--Card container-->
+    <div
+      class="grid p-10 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5"
+    >
+      <!--Card 1-->
+      <div class="rounded-md overflow-hidden shadow-lg">
+        <img class="w-full" src="./images/home1.jpg" alt="" />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2">Orchid Villa</div>
+          <p class="text-gray-700">
+            Located in the suburbs of california, orchid villa offers luxury
+            with a modern touch. Equipped with green lighting and a rainwater
+            harvesting system, this property is eco-friendly.
+          </p>
+        </div>
+        <div class="px-6 pt-4 pb-2">
+          <span
+            class="inline-block text-green-300 font-bold text-sm px-3 py-1 mr-2 mb-2"
+            >$450,0000</span
+          >
+        </div>
+        <div class="px-6 pt-4 pb-2">
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+            >7 Beds</span
+          >
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 font-semibold text-gray-700 mr-2 mb-2"
+            >9 Baths</span
+          >
+        </div>
+        <div class="px-6 pt-4 pb-10">
+          <button
+            class="inline-block bg-green-600 rounded-full px-4 py-1 text-sm font-semibold text-white mr-2 mb-2"
+          >
+            View property
+          </button>
+        </div>
+      </div>
+      <!--Card 2-->
+      <div class="rounded-md overflow-hidden shadow-lg">
+        <img class="w-full" src="./images/home2.jpg" alt="" />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2">577 Gracia</div>
+          <p class="text-gray-700">
+            Located in the suburbs of california, orchid villa offers luxury
+            with a modern touch. Equipped with green lighting and a rainwater
+            harvesting system, this property is eco-friendly.
+          </p>
+        </div>
+        <div class="px-6 pt-4 pb-2">
+          <span
+            class="inline-block text-green-300 font-bold text-sm px-3 py-1 mr-2 mb-2"
+            >$450,0000</span
+          >
+        </div>
+        <div class="px-6 pt-4 pb-2">
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+            >7 Beds</span
+          >
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 font-semibold text-gray-700 mr-2 mb-2"
+            >9 Baths</span
+          >
+        </div>
+        <div class="px-6 pt-4 pb-10">
+          <button
+            class="inline-block bg-green-600 rounded-full px-4 py-1 text-sm font-semibold text-white mr-2 mb-2"
+          >
+            View property
+          </button>
+        </div>
+      </div>
+      <!--Card 3-->
+      <div class="rounded-md overflow-hidden shadow-lg">
+        <img class="w-full" src="./images/home3.jpg" alt="" />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2">Nexa Epitome</div>
+          <p class="text-gray-700">
+            Located in the suburbs of california, orchid villa offers luxury
+            with a modern touch. Equipped with green lighting and a rainwater
+            harvesting system, this property is eco-friendly.
+          </p>
+        </div>
+        <div class="px-6 pt-4 pb-2">
+          <span
+            class="inline-block text-green-300 font-bold text-sm px-3 py-1 mr-2 mb-2"
+            >$450,0000</span
+          >
+        </div>
+        <div class="px-6 pt-4 pb-2">
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+            >7 Beds</span
+          >
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 font-semibold text-gray-700 mr-2 mb-2"
+            >9 Baths</span
+          >
+        </div>
+        <div class="px-6 pt-4 pb-10">
+          <button
+            class="inline-block bg-green-600 rounded-full px-4 py-1 text-sm font-semibold text-white mr-2 mb-2"
+          >
+            View property
+          </button>
+        </div>
+      </div>
+    </div>
+    <!--Card section End -->
+    <!--Banner Start -->
+    <div
+      class="py-20 h-screen"
+      style="
+        background-image: linear-gradient(
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)
+          ),
+          url('./images/luxury.jpg');
+      "
+    >
+      <div class="container mx-auto px-6 mt-40">
+        <h2 class="text-4xl font-bold text-white mb-2">
+          Experience Luxury Like Never Before
+        </h2>
+        <h3 class="text-2xl text-gray-200 mb-8">
+          50+ Exotic locations across the globe.
+        </h3>
+        <button
+          class="text-white shadow-lg uppercase border px-8 py-4 font-bold tracking-wider"
+        >
+          Explore Locations
+        </button>
+      </div>
+    </div>
+    <!--Banner End -->
+    <!--Heading-->
+    <div class="mt-20 flex p-10 justify-center <!--lg:justify-start-->">
+      <h2 class="text-3xl text-gray-500 mb-2">Locations</h2>
+    </div>
+    <!--Card section Start-->
+    <!--Card container-->
+    <div
+      class="grid p-10 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5"
+    >
+      <!--Card 1-->
+      <div class="rounded-md overflow-hidden shadow-lg">
+        <img class="w-full" src="./images/ny.jpg" alt="" />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2">New York</div>
+          <p class="text-gray-700">
+            New York City comprises 5 boroughs sitting where the Hudson River
+            meets the Atlantic Ocean. At its core is Manhattan, a densely
+            populated borough that’s among the world’s major commercial,
+            financial and cultural centers. Its iconic sites include skyscrapers
+            such as the Empire State Building and sprawling Central Park.
+          </p>
+        </div>
+      </div>
+      <!--Card 2-->
+      <div class="rounded-md overflow-hidden shadow-lg">
+        <img class="w-full" src="./images/california.jpg" alt="" />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2">San Fransisco</div>
+          <p class="text-gray-700">
+            San Francisco, officially the City and County of San Francisco, is a
+            cultural, commercial, and financial center in the U.S. state of
+            California.
+          </p>
+        </div>
+      </div>
+      <!--Card 3-->
+      <div class="rounded-md overflow-hidden shadow-lg">
+        <img class="w-full" src="./images/chicago.jpg" alt="" />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2">New York</div>
+          <p class="text-gray-700">
+            New York City comprises 5 boroughs sitting where the Hudson River
+            meets the Atlantic Ocean. At its core is Manhattan, a densely
+            populated borough that’s among the world’s major commercial,
+            financial and cultural centers. Its iconic sites include skyscrapers
+            such as the Empire State Building and sprawling Central Park.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--Card section End -->
+    <!--Banner Start -->
+    <div
+      class="py-20"
+      style="background-image: linear-gradient(315deg, #d1fae5 0%, #10b981 74%)"
+    >
+      <div class="container mx-auto px-6">
+        <h2 class="text-4xl font-bold text-white mb-2">
+          Save upto 50% on broker commisions
+        </h2>
+        <h3 class="text-2xl text-white mb-8">Lowest brokerage fees</h3>
+        <button
+          class="text-black bg-white uppercase px-8 py-4 font-bold tracking-wider rounded-2xl"
+        >
+          Enquire
+        </button>
+      </div>
+    </div>
+    <!--Banner End -->
+    <!--Heading-->
+    <div class="mt-20 flex p-10 justify-center <!--lg:justify-start-->">
+      <h2 class="text-3xl text-gray-500 mb-2">What clients say about us ?</h2>
+    </div>
+    <!--Testimonial Start -->
+
+    <div
+      class="p-10 grid grid-cols-1 gap-5 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3"
+    >
+      <!--Testimonial Card 1-->
+      <div class="shadow-lg w-72 bg-white rounded-xl mx-auto p-4">
+        <p class="text-gray-600">
+          <span class="text-green-500 text-lg font-bold">"</span>
+          This is one of the best property websites I have ever used.Kudos to
+          Prime Properties and the team.
+          <span class="text-green-500 text-lg font-bold">"</span>
+        </p>
+        <div class="flex items-center bg-green-100 rounded-full mt-3">
+          <a class="block relative" href="">
+            <img
+              class="h-10 w-10 rounded-full mx-auto"
+              src="./images/avatar.png"
+              alt=""
+            />
+          </a>
+          <div class="flex flex-col ml-2 justify-between">
+            <span class="text-green-700 text-sm">Ashutosh Pawar</span>
+            <span class="text-xs flex items-center">Director</span>
+          </div>
+        </div>
+      </div>
+      <!--Testimonial Card 2-->
+      <div class="shadow-lg w-72 bg-white rounded-xl mx-auto p-4">
+        <p class="text-gray-600">
+          <span class="text-green-500 text-lg font-bold">"</span>
+          This is one of the best property websites I have ever used.Kudos to
+          Prime Properties and the team.
+          <span class="text-green-500 text-lg font-bold">"</span>
+        </p>
+        <div class="flex items-center bg-green-100 rounded-full mt-3">
+          <a class="block relative" href="">
+            <img
+              class="h-10 w-10 rounded-full mx-auto"
+              src="./images/avatar.png"
+              alt=""
+            />
+          </a>
+          <div class="flex flex-col ml-2 justify-between">
+            <span class="text-green-700 text-sm">Ashutosh Pawar</span>
+            <span class="text-xs flex items-center">Director</span>
+          </div>
+        </div>
+      </div>
+      <!--Testimonial Card 3-->
+      <div class="shadow-lg w-72 bg-white rounded-xl mx-auto p-4">
+        <p class="text-gray-600">
+          <span class="text-green-500 text-lg font-bold">"</span>
+          This is one of the best property websites I have ever used.Kudos to
+          Prime Properties and the team.
+          <span class="text-green-500 text-lg font-bold">"</span>
+        </p>
+        <div class="flex items-center bg-green-100 rounded-full mt-3">
+          <a class="block relative" href="">
+            <img
+              class="h-10 w-10 rounded-full mx-auto"
+              src="./images/avatar.png"
+              alt=""
+            />
+          </a>
+          <div class="flex flex-col ml-2 justify-between">
+            <span class="text-green-700 text-sm">Ashutosh Pawar</span>
+            <span class="text-xs flex items-center">Director</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--Testimonial End -->
+    <!--Heading-->
+    <div class="mt-20 flex p-10 justify-center <!--lg:justify-start-->">
+      <h2 class="text-3xl text-gray-500 mb-2">Contact Us</h2>
+    </div>
+    <!--Form Start-->
+    <div class="bg-green-300 mt-5 flex p-10 justify-center items-center">
+      <form class="w-full max-w-lg">
+        <div class="flex flex-wrap mb-6">
+          <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+            <lable
+              class="block uppercase text-xs text-gray-700 font-bold mb-2 tracking-wider"
+              >First Name</lable
+            >
+            <input
+              type="text"
+              placeholder="Jane"
+              class="block w-full px-4 py-3 rounded text-gray-700 border border-green-500 mb-3"
+            />
+            <p class="text-green-500 text-sm italic">
+              Please fill out this field
+            </p>
+          </div>
+          <div class="w-full md:w-1/2 px-3">
+            <lable
+              class="block uppercase text-xs text-gray-700 font-bold mb-2 tracking-wider"
+              >Last Name</lable
+            >
+            <input
+              type="text"
+              placeholder="Doe"
+              class="block w-full px-4 py-3 rounded text-gray-700 border border-green-500"
+            />
+          </div>
+        </div>
+        <div class="flex mb-6">
+          <div class="w-full px-3">
+            <label
+              class="block uppercase text-xs text-gray-700 font-bold mb-2 tracking-wider"
+              >E-mail</label
+            >
+            <input
+              type="text"
+              placeholder="example@gmail.com"
+              class="block w-full px-4 py-3 rounded text-gray-700 border border-green-500 mb-3"
+            />
+            <p class="text-gray-700 text-xs italic">
+              Some tips - as long as needed
+            </p>
+          </div>
+        </div>
+        <div class="flex mb-6">
+          <div class="w-full px-3">
+            <label
+              class="block uppercase text-xs text-gray-700 font-bold mb-2 tracking-wider"
+              >Message</label
+            >
+            <textarea
+              placeholder=""
+              class="no-resize resize-none h-48 appearance-none block w-full px-4 py-3 rounded text-gray-700 border border-green-500 mb-3"
+            ></textarea>
+            <p class="text-gray-700 text-xs italic">
+              Re-size can be disabled by set by resize-none / resize-y /
+              resize-x / resize
+            </p>
+          </div>
+        </div>
+        <div class="flex md:items-center">
+          <div class="md:w-1/3">
+            <button
+              class="shadow bg-green-400 text-white px-4 py-2 mx-2 rounded"
+            >
+              Sent
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <!--Form End-->
   </body>
 </html>
