--- a/public/index.html
+++ b/public/index.html
@@ -62,8 +62,10 @@
         <h1
           class="tracking-tight font-extrabold text-4xl sm:text-5xl md:text=6xl"
         >
-          <span class="block">Premium Properties</span>
-          <span class="block text-green-500">Non-premium Prices</span>
+          <span class="block <!--lg:inline-->">Premium Properties</span>
+          <span class="block text-green-500 <!--lg:inline-->"
+            >Non-premium Prices</span
+          >
         </h1>
         <p
           class="mt-3 text-base text-gray-500 md:text-xl md:mt-5 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto <!--lg:mx-0-->"
